[tool.poetry]
name = "paienv"
version = "0.0.9"
description = "Environment for CI/CD"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PAICookers/PAIEnv"
homepage = "https://github.com/PAICookers/PAIEnv"
documentation = "https://github.com/PAICookers/PAIEnv#readme"
include = ["./paienv"]

[tool.poetry.dependencies]
python = "^3.6"
paitest = {git = "git@github.com:PAICookers/PAITest.git", branch = "dev"}


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
